[package]
name = "ag_unlocker"
version = "2.2.1"
edition = "2021"
description = "Antigravity Configuration Tool"
authors = ["Brent t.me/nova_txt"]

[dependencies]
obfstr = "=0.4.3"
sha2 = "0.10"
hex = "0.4"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
winres = "0.1"
